[project]
name = "kyubic_ros"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.6.2",
    "colcon-common-extensions>=0.3.0",
    "numpy>=2.2.4",
    "vcstools>=0.1.42",
    "lark>=1.2.2",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "pyqt6>=6.9.1",
    "pyopengl>=3.1.9",
    "numpy-stl>=3.2.0",
]

[tool.uv.pip]
system = true
