[project]
name = "kyubic_ros"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.6.2",
    "colcon-common-extensions>=0.3.0",
    "vcstools>=0.1.42",
    "lark>=1.2.2",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "pyqt6>=6.9.1",
    "pyopengl>=3.1.9",
    "numpy-stl>=3.2.0",
    "pandas>=2.3.1",
    "matplotlib>=3.10.3",
    "pynmea2>=1.19.0",
    "depthai>=2.30.0.0",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "viser>=1.0.4",
    "pydot>=4.0.1",
    "protobuf>=6.33.1",
    "grpcio-tools>=1.76.0",
    "jinja2>=3.1.6",
]

[tool.uv.pip]
system = true
