<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behavior_tree</name>
  <version>0.1.0</version>
  <description>kyubic behavior tree</description>
  <maintainer email="kyutech.robosub@gmail.com">Ryohei Ohnishi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>behaviortree_cpp</depend>
  <depend>joy_common</depend>
  <depend>lifecycle_msgs</depend>
  <depend>driver_msgs</depend>
  <depend>joy_common_msgs</depend>
  <depend>action_tutorials_interfaces</depend>
  <depend>wrench_action_sample_msgs</depend>
  <!-- <depend>projection_dynamic_look_ahead_planner</depend> -->
  <!-- <depend>wrench_planner</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
