<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensors_esp32_driver</name>
  <version>0.1.0</version>
  <description>communication with ESP32 on sensor board</description>
  <maintainer email="kyutech.robosub@gmail.com">Ryohei Ohnishi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>timer</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>driver_msgs</depend>
  <depend>protolink</depend>
  <depend>system_check</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
